--- a/step-5/style.css
+++ b/step-5/style.css
@@ -5,18 +5,19 @@
     font-family:"Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei UI",
                 "Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
 }
-body{
-    /*background-color: #2c2e2c;*/
-    background: rgba(10, 6, 6,0.75);
+html{
     width: 100%;
 }
+body{
+    width: 100%;
+    background: rgba(10, 6, 6,0.75);
+}
 #app{
-    width: 50%;
+    width: 100%;
     height: 300px;
-    margin: 10% auto;
     text-align: center;
     line-height: 2rem;
-
+    padding: 5rem 0;
 }
 #signInAndSignUp > h1{
     padding-bottom:2rem;
@@ -41,30 +42,62 @@ body{
     color: white;
 }
 
-
 .newTask{
     padding: 10px 0;
+
 }
 .newTask input{
     width: 600px;
     height: 50px;
+    box-shadow: 4px 4px 5px  #eee;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    outline: none;
 }
-.todos *{
-    padding: 6px;
+.todos {
+    color: #dddddd;
+    text-align: left;
+}
+#todo .username{
+    color: lightgoldenrodyellow;
 }
 button{
-    background-color: none;
+    background-color: #ccc;
     font-size: 14px;
     outline: none;
     border: none;
-    padding: 0;
+    border-radius: 0.3rem;
+    padding: 0.1rem;
+    margin: 0.5rem;
 }
 button:hover{
     background: #ccc;
     border: none;
-    color: yellow;
+    color: indianred;
 }
 #signInAndSignUp h1{
     color: #ffffff;
     font-size: 48px;
+}
+.todos > li button{
+    background: #585858;
+    position: absolute;
+    right: 0;
+}
+.todos{
+    width: 600px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.todos span{
+    display: inline-block;
+    padding: 0 1rem;
+}
+.todos > li{
+    width: 98%;
+    position: relative;
+    margin-left: 1rem;
+}
+.createtime{
+    font-size: 16px;
 }
